solved some UI layout issues with headerbox. Solved an issue iterating a ForEach. Added links to feedback and version number Added capability to use source of IDs from a query (besides the following items).

--- a/azdo.css
+++ b/azdo.css
@@ -49,7 +49,6 @@
 
 body {
     background-color: rgb(255, 255, 255);
-    color: white;
 	margin: 10px;
     border-left: thick double #ffffff;			
     font-family: "Segoe UI VSS (Regular)","-apple-system",BlinkMacSystemFont,"Segoe UI",sans-serif;
@@ -101,7 +100,7 @@ body {
 	padding: 3px 10px;
 	border: 0px ;
 	vertical-align: top; 
-	white-space:nowrap;
+	/* white-space:nowrap; */
 	overflow-x:auto; 
 	overflow-y:hidden;}
 
@@ -113,22 +112,26 @@ body {
 	border-color:rgba(var(--palette-neutral-8,234,234,234),1);
 	border-radius:5px;
 }
-/* .leftcolumn { 
+.leftcolumn { 
 	 width:70%;
-	padding:0px;
+	/* padding:0px;
     white-space:nowrap;
 	overflow-x:auto;
 	height:70px;
-	overflow-y:hidden;
-}  */
+	overflow-y:hidden; */
+} 
 .centercolumn{ 
 
 	width:15%; 
+	min-width: 200px;
+	max-width: 300px;
 	vertical-align: center; 
 
 } 
 .rightcolumn{ 
 	width:15%; 
+	min-width: 232px;
+	max-width: 300px;
 	vertical-align: center; 
 
 } 
@@ -160,15 +163,12 @@ body {
 }
 .contributors{
 
-    display: flex;
+	display: flex;
+	flex-wrap: nowrap;
 	flex-direction: row;
-	/* padding-left: 10px;
-	padding-top: 5px; */
-	/* width: 100px;
-	height: 180px; */
-    /* margin:5px; */
-    /* display:inline-block */
-	
+	height: 70px;
+	overflow-x: auto;
+
 }
 
 .contributors .button{
